[package]
name = "cen"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"
license = "MIT"
description = "Reference implementation of the CEN protocol for decentralized contact tracing."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.8"
rand_core = "0.5"
ed25519-zebra = "0.2.2"
