[package]
name = "tcn"
# Before incrementing version number:
# - update CHANGELOG.md
# - update html_root_url
version = "0.4.1"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"
license = "MIT"
description = "Reference implementation of the TCN protocol for decentralized contact tracing."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
thiserror = "1"
sha2 = "0.8"
rand_core = "0.5"
ed25519-zebra = "0.2.2"

[dev-dependencies]
rand = "0.7"
hex = "0.4"
rand_chacha = "0.2"
